[package]
name = "skr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dealize = { git = "https://www.github.com/verdex/dealize", version = "0.4.0", tag = "release-0.4.0" }
yoke = { git = "https://www.github.com/verdex/yoke", version = "0.2.0", tag = "release-0.2.0" }